--- a/album-songs/public/css/style.css
+++ b/album-songs/public/css/style.css
@@ -1,11 +1,105 @@
-.demo {
-background: #AECE1D;
-background: -moz-linear-gradient(left, #AECE1D 0%, #1C6EA4 60%, #C50000 100%);
-background: -webkit-linear-gradient(left, #AECE1D 0%, #1C6EA4 60%, #C50000 100%);
-background: linear-gradient(to right, #AECE1D 0%, #1C6EA4 60%, #C50000 100%);
+/* ==========================================================================
+   #STYLES
+   ========================================================================== */
+
+
+/**
+ *
+ * [1]: Inheriting box sizing slightly better best-practice
+ * https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+ *
+ * [2]: WordPress System font-stack
+ */
+
+
+/* RESET
+   ========================================================================== */
+
+
+html {
+  box-sizing: border-box;
 }
 
-.elemento-image {
-  width: 100%;
-  height: 300px;
+*, *::before, *::after {
+  box-sizing: inherit; /* [1] */
+  margin: 0;
+  padding: 0;
 }
+
+
+
+/* FONTS
+   ========================================================================== */
+
+body {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif; /* [2] */
+}
+
+
+
+/* Header
+   ========================================================================== */
+
+.header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  background-color: #525286;
+  color: #FFFFFF;
+  margin-bottom: 50px;
+}
+
+
+
+/* Homepage Container
+   ========================================================================== */
+
+.container {
+  width: 960px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+
+/* Menu Card
+   ========================================================================== */
+
+.elemento {
+  text-align: center;
+}
+
+.elemento > * {
+  margin-bottom: 5px;
+}
+
+/* Profile Page
+   ========================================================================== */
+
+.canzone {
+  display: flex;
+  height: 100vh;
+  width: 100%;
+}
+
+.canzone-image {
+  height: 100%;
+  flex-grow: 1;
+  flex-basis: 50%;
+}
+
+.canzone-details {
+  flex-basis: 30%;
+  flex-grow: 1;
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.canzone-details > * {
+  margin-bottom: 20px;
+}
+
